Updated the Step method and create classes where the individual instructions will be executed

--- a/ARMAssember2/ARMAssember2.csproj
+++ b/ARMAssember2/ARMAssember2.csproj
@@ -48,7 +48,9 @@
     <Compile Include="Instruction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThreeParameterExectues.cs" />
     <Compile Include="ThreeParameters.cs" />
+    <Compile Include="TwoParameterExecutes.cs" />
     <Compile Include="TwoParameterInst.cs" />
   </ItemGroup>
   <ItemGroup>
